less/board.less
@import "variables";

html {
    font: 14px/1.4 Helvetica, Arial, sans-serif;

    @media screen and (min-width: @screen-big-board-min) { font-size: 18px; }
    @media screen and (max-width: @screen-md) { font-size: 13px; }
    @media screen and (max-width: @screen-sm) { font-size: 12px; }
    @media screen and (max-width: @screen-xs) { font-size: 11px; }

    // @screen-xs:                  480px;  // Extra small screen / phone
    // @screen-sm:                  768px;  // Small screen / tablet
    // @screen-md:                  992px;  // Medium screen / desktop
    // @screen-lg:                 1200px;  // Large screen / wide desktop
    // @screen-xl:                 1500px;  // Superwide
    // @screen-big-board:          1920px;  // HDTV
}

body {
    margin: 0;
    padding: 0;
}

.results-wrapper {
    padding: 0 10px;

    h1, h2, h3, h4, h5, h6, p { margin: 0; }

    table {
        font-weight: 400;
        color: @gray;
        border-collapse: separate;
        font-size: 1.0rem;
    }

    .results-header {
        font-size: 1.1rem;
        overflow: hidden;
        margin-bottom: 0.5rem;

        h1 {
            font: 700 2.6rem @gotham;
            text-transform: uppercase;
            color: @gray-darker;
            float: left;

            @media screen and (max-width: @screen-xs) { font-size: 2rem; }
        }

        h4 {
        	text-transform: uppercase;
        	font-weight: normal;
        	color: @gray-medium;
        	font-size: 1.3rem;
        	font-family: @gotham;
        	margin-bottom: .5rem;
        }

        .leaderboard {
            float: right;
            display: table;
        }
    }

    .results  {
        font-size: 0.9rem;
        height: 100%;
        .clearfix();

        .column {
            box-sizing: border-box;

            // stack on small screens,
            // side-by-side on larger screens
            @media screen and (min-width: @screen-sm) {
                padding: 0 1%;
                float: left;
                width: 50%;

                &.first { padding-left: 0; }

                &.last {
                    padding-right: 0;

                    .poll-closing-group:first-child { display: none; }
                }
            }
        }

        .poll-closing-group {
            font: normal 0.8rem/1.2 @knockout;
            text-transform: uppercase;
            letter-spacing: 0.05em;
            color: @gray-light;
            padding-bottom: 3px;
            border-bottom: 2px solid @gray-light;
        }

        .races {
            width: 100%;
            border-spacing: 0 0.2rem;

            td {
                padding: 0.2rem 0.4rem;
                line-height: 1.1;

                &:nth-child(4) { border-radius: 0.4rem 0 0 0.4rem; }
                &:nth-child(5) { border-radius: 0 0.4rem 0.4rem 0; }
                &:nth-child(7) { border-radius: 0.4rem 0 0 0.4rem; }
                &:nth-child(8) { border-radius: 0 0.4rem 0.4rem 0; }

                &.candidate-total-spacer {
                    padding: 0;
                    width: 1%;
                }
            }
        }
    }

    .state-slide {
        .header {
            font-size:30px;
            padding-top:20px;
        }
    }
}

tr {
    .results-status {
        color: @white;
        width: 12%;
        white-space: nowrap;
        text-align: center;

        &:after{
            content: "% in";
            font-size: 80%;
            vertical-align: top;
            margin-left:-.1rem;
        }
    }

    &.reporting .results-status { color: @gray; }
    &.called .results-status { color: @gray-light; }

    .pickup {
        width: 4%;
        vertical-align: middle;
        img {
            width: 100%;
            height: auto;
        }
    }

    &.party-change .pickup{
        &.dem { color: @dem };
        &.gop { color: @gop };
        &.ind { color: @ind };

        &:after{
            font-weight: 500;
            content: "+1";
            font-style: italic;
            font-size: 65%;
        }
    }

    .state {
        color: #000;
        text-align: center;
        width: 10%;
        &.dem { color: @dem; }
        &.gop  { color: @gop; }
        &.other { color: @ind; }
    }

    .description { width: 48%; }

    .choice {
        width: 10%;

        &.no { background: @gopDim; }
        &.yes { background: @indDim; }
    }

    .candidate {
        transition: all 2s ease;
        width: 30%;

        // highlight on change
        &.lighten { background-color: @yellow !important; }

        &.dem { background: @demDim; }
        &.gop, &.no { background: @gopDim; }
        &.other, &.yes { background: @indDim; }

        &.dem.winner { background: @dem; color: white; }
        &.gop.winner, &.no.winner { background: @gop; color: white; }
        &.other.winner, &.yes.winner { background: @ind; color: white; }

        .party {
            font-size: 75%;
            font-weight: normal;
            letter-spacing: 0.05rem;
            margin-left: 0.25rem;
        }

        &.incumbent {
            img {
                width: .6rem;
                height: 1rem;
                vertical-align: text-top;
            }
        }

        @media screen and (max-width: @screen-xs) {
            .fname { display: none; }
        }
    }

    .candidate-total {
        transition: all 2s ease;
        &.lighten {
            background-color: @ind !important;
        }
        width: 7%;
        text-align: right;
        background: transparent;
        position: relative;

        &.dem { background: @demDim; }
        &.gop,
        &.no { background: @gopDim; }
        &.other,
        &.yes { background: @indDim; }

        &.dem.winner { background: @dem; color: white; }
        &.gop.winner, &.no.winner { background: @gop; color: white; }
        &.other.winner, &.yes.winner { background: @ind; color: white; }
    }

    &.reporting .candidate-total {
        &:after{
            content:"%";
            font-size: 80%;
            vertical-align: top;
        }
    }

    .candidate-total-spacer + .candidate-total { text-align: left; }
}


// board-specific styles
.ballot-measures .results .races {
    .pickup { display: none; }
    .state {
        width: 46%;
        text-align: left;
        padding-left: 0;
    }
    .candidate {
        width: 11%;

        .fname { display: none; }
        &:nth-child(4) { padding-right: 0; }
        &:nth-child(8) { padding-left: 0; }
    }
}

.president .results .races {
    .pickup { display: none; }
    .state {
        white-space: nowrap;
        width: 15%;
    }
    .results-status { width: 10%; }
}


/*
 * LEADERBOARD
 */
.results-header-group {
	white-space: nowrap;
	padding: 0 0.75rem 0.07rem;
	display: inline-block;
	overflow: hidden;
	box-sizing: border-box;

	.footer-container & { padding: 0 0.25rem 0.07rem; }

	&:last-child {
		margin-right: 0;
		padding-right: 0;
	}

	.party,
	.seats-needed,
	.total {
		display: inline;
	}

	h2,
	p {
		margin: 0;
		font-size: 1.4rem;
	}

	h2 { font-weight: 500; }

	.change {
		font-size: 1.4rem;
		font-weight: 500;
	}

	.seats,
	.needed {
		border: 0.1rem solid transparent;

		@media screen and (min-width: @screen-sm){
			border-width: 2px;
		}

		display: inline-block;
		box-sizing: border-box;
		min-width: 3rem;
		height: 3rem;
		border-radius: 2rem;
		margin-top: 0;
		padding: 0 0.5rem;
		// color: @white;
		font-size: 1.5rem;
		text-align: center;
		line-height: 2.8rem;
	}
    .seats {
        color: @white;
    }

	.seats-needed,
	.total {
		white-space: nowrap;
	}

	.seats-needed {
		padding-left: 1rem;

		.needed,
        .seats { display: inline-block; }
	}

	&.dem {
		color: fadeout(@dem, 15%);

		.seats { background: fadeout(@dem, 25%); }
        .needed { background: @demDim; }
	}

	&.gop {
		color: fadeout(@gop, 25%);

		.seats { background: fadeout(@gop, 25%); }
        .needed { background: @gopDim; }
	}

	&.other {
		color: fadeout(@ind, 25%);

		.seats { background: fadeout(@ind, 25%); }
		.total { padding: 0; }
	}

	&.not-called {
		color: fadeout(@gray, 25%);

		h2 { display: inline; }

		.seats {
			border-color: fadeout(@gray-light, 25%);
			color: fadeout(@gray, 25%);
		}
	}
}


/*
 * FOOTER / CREDIT
 */
.footer {
    margin-top: 11px;

    p {
        margin: 0;
        font-size: 11px;
        line-height: 1.7;
        color: #999;
        font-style: italic;
    }
}

